# Slack_bot

./: README.md  app.py  pyproject.toml  slack.js
src/: .gitignore
