[project]
name = "slack-bot-1"
version = "0.1.0"
description = ""
authors = [
    {name = "ryoma",email = "yamaguchi@sonettique.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "slack-bolt (>=1.23.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
